fix grid letter alignment

--- a/src/components/Grid/Grid.module.css
+++ b/src/components/Grid/Grid.module.css
@@ -65,6 +65,8 @@
 
 .gridCellValue {
   grid-area: 1/1;
+  text-align: center;
+  width: 100%;
 }
 
 .hiddenInput {
